--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <%- include('head'); -%>
     <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/custom.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-secondary fixed-top">
-      <a class="navbar-brand" href="/">어서오세요 <%= user.ID %> 님</a>
+      <a class="navbar-brand" href="/">어서오세요 <%=user.ID%>님</a>
       <ul class="navbar-nav navbar-right">
-        <% if (user.ROLE === "R" | "H") { %>
+        <% if (user.ROLE === "R" || "H") { %>
         <li class="nav-item">
-          <a class="nav-link" href="#">태스크 만들기</a>
+          <a class="nav-link" href="#">태스크 참여 신청</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">태스크 보기</a>
@@ -29,20 +25,17 @@
         <li class="nav-item">
           <a class="nav-link" href="/userInfo">내 정보</a>
         </li>
+        <%}%> <% if (user.ROLE === "A") { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/submitterlist">제출자 확인하기</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/generatetask">태스크 만들기</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/userInfo">내 정보</a>
+        </li>
         <%}%>
-        <!-- <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbardrop"
-            data-toggle="dropdown"
-          >
-          </a>
-          <div class="dropdown-menu bg-light">
-            <a class="dropdown-item" href="#"></a>
-            <a class="dropdown-item" href="#">2</a>
-          </div>
-        </li> -->
         <li class="nav-item">
           <form method="POST" action="/logout">
             <a class="nav-link"
@@ -52,20 +45,8 @@
         </li>
       </ul>
     </nav>
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   </body>
 </html>
