--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <%- include('head'); -%>
     <title>Login</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <!-- <link rel="stylesheet" href="/css/login.css" /> -->
   </head>
   <body>
     <div class="container">
