--- a/src/views/userInfo.ejs
+++ b/src/views/userInfo.ejs
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <%- include('head'); -%>
     <title>User Info</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/custom.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
