--- a/src/views/submitterlist.ejs
+++ b/src/views/submitterlist.ejs
@@ -6,53 +6,55 @@
   </head>
   <body>
     <div class="container">
-        <div class="row mt-5">
+      <div class="row mt-4">
         <h2>제출자 명단</h2>
-        <hr class="mb-3" />
-        <div class="table-responsive-sm"></div>
-        <table class="table table-hover table-striped table-sm table-bordered">
-          <thead class="thead-dark">
-            <tr>
-              <th>ID</th>
-              <th>이름</th>
-              <th>성별</th>
-              <th>주소</th>
-              <th>생일</th>
-              <th>전화번호</th>
-              <th>나이</th>
-              <th>제출자 유형</th>
-              <th>기관 주소</th>
-              <th>기관 번호</th>
-              <th>승인상태</th>
-              <th>데이터 점수</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% for(i = 0; i < submitter.length; i++) { %>
-            <tr>
-              <td><%=submitter[i].ID %></td>
-              <td><%=submitter[i].NAME %></td>
-              <td><%=submitter[i].GENDER %></td>
-              <td><%=submitter[i].ADDRESS %></td>
-              <td><%=submitter[i].BIRTHDATE.toString().substring(4, 15) %></td>
-              <td><%=submitter[i].PNUM %></td>
-              <td><%=submitter[i].AGE %></td>
-              <% if (submitter[i].ROLE ==="R") {%> <td>식당</td> <%}%>
-              <% if (submitter[i].ROLE === "H") {%> <td>보건소</td> <%}%>
-              <td><%=submitter[i].RLOCATE %></td>
-              <td><%=submitter[i].RPNUM %></td>
-              <% if (submitter[i].REQUEST ==="A") {%> <td>참여중</td> <%}%>
-              <% if (submitter[i].REQUEST === "W") {%> <td>대기중</td> <%}%>
-              <% if (submitter[i].REQUEST === "N") {%> <td>신청 안 함</td> <%}%>
-              <td><%=submitter[i].ESCORE %></td>
-            </tr>
-            <% } %>
-          </tbody>
-        </table>
+        <div class="table-responsive-sm">
+          <table
+            class="table table-hover table-striped table-sm table-bordered"
+          >
+            <thead class="thead-dark">
+              <tr>
+                <th>ID</th>
+                <th>이름</th>
+                <th>성별</th>
+                <th>주소</th>
+                <th>생일</th>
+                <th>전화번호</th>
+                <th>나이</th>
+                <th>제출자 유형</th>
+                <th>기관 주소</th>
+                <th>기관 번호</th>
+                <th>데이터 점수</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% for(i = 0; i < submitter.length; i++) { %>
+              <tr>
+                <td><%=submitter[i].ID %></td>
+                <td><%=submitter[i].NAME %></td>
+                <td><%=submitter[i].GENDER %></td>
+                <td><%=submitter[i].ADDRESS %></td>
+                <td>
+                  <%=submitter[i].BIRTHDATE.toString().substring(4, 15) %>
+                </td>
+                <td><%=submitter[i].PNUM %></td>
+                <td><%=submitter[i].AGE %></td>
+                <% if (submitter[i].ROLE ==="R") {%>
+                <td>식당</td>
+                <%}%> <% if (submitter[i].ROLE === "H") {%>
+                <td>보건소</td>
+                <%}%>
+                <td><%=submitter[i].RLOCATE %></td>
+                <td><%=submitter[i].RPNUM %></td>
+                <td><%=submitter[i].ESCORE %></td>
+              </tr>
+              <% } %>
+            </tbody>
+          </table>
         </div>
-        <hr class="mb-3" />
-        <div><a href="/"> 홈으로 돌아가기</a></div>
-        </div>
+      </div>
+      <hr class="mb-3" />
+      <div><a href="/"> 홈으로 돌아가기</a></div>
     </div>
   </body>
 </html>
